// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducers ADD_TODO should return properly 1`] = `
Array [
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers ADD_TODO should return properly 2`] = `
Array [
  Object {
    "completed": false,
    "id": 2,
    "text": "text",
  },
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers ADD_TODO should return properly 3`] = `
Array [
  Object {
    "completed": false,
    "id": 100,
    "text": "text",
  },
  Object {
    "completed": false,
    "id": 99,
    "text": "text",
  },
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers ADD_TODO should return properly 4`] = `
Array [
  Object {
    "completed": false,
    "id": 100,
    "text": "text",
  },
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
  Object {
    "completed": false,
    "id": 99,
    "text": "text",
  },
]
`;

exports[`Reducers CLEAR_COMPLETED should return properly 1`] = `Array []`;

exports[`Reducers CLEAR_COMPLETED should return properly 2`] = `
Array [
  Object {
    "completed": false,
    "id": 2,
    "text": "text",
  },
]
`;

exports[`Reducers CLEAR_COMPLETED should return properly 3`] = `
Array [
  Object {
    "completed": false,
    "id": 2,
    "text": "text",
  },
]
`;

exports[`Reducers COMPLETE_ALL should return properly 1`] = `Array []`;

exports[`Reducers COMPLETE_ALL should return properly 2`] = `
Array [
  Object {
    "completed": true,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers COMPLETE_ALL should return properly 3`] = `
Array [
  Object {
    "completed": true,
    "id": 1,
    "text": "text",
  },
  Object {
    "completed": true,
    "id": 2,
    "text": "text",
  },
]
`;

exports[`Reducers DELETE_TODO should return properly 1`] = `Array []`;

exports[`Reducers DELETE_TODO should return properly 2`] = `Array []`;

exports[`Reducers DELETE_TODO should return properly 3`] = `
Array [
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers EDIT_TODO should return properly 1`] = `Array []`;

exports[`Reducers EDIT_TODO should return properly 2`] = `
Array [
  Object {
    "completed": false,
    "id": 1,
    "text": "texttext",
  },
]
`;

exports[`Reducers EDIT_TODO should return properly 3`] = `
Array [
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers TOGGLE_TODO should return properly 1`] = `Array []`;

exports[`Reducers TOGGLE_TODO should return properly 2`] = `
Array [
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers TOGGLE_TODO should return properly 3`] = `
Array [
  Object {
    "completed": true,
    "id": 1,
    "text": "text",
  },
]
`;

exports[`Reducers TOGGLE_TODO should return properly 4`] = `
Array [
  Object {
    "completed": false,
    "id": 1,
    "text": "text",
  },
]
`;
